[project]
name = "reposition-window-on-hover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
    "pywin32>=311",
    "rich>=14.1.0",
]

[project.scripts]
reposition-window-on-hover = "main:main"
